--- a/sass/_listContainer.scss
+++ b/sass/_listContainer.scss
@@ -14,7 +14,6 @@
             margin-bottom: 0.5rem;
             @include mq(768px) {
                 padding: 0 0.5rem;
-
             }
         }
 
@@ -46,5 +45,10 @@
         label {
             font-size: 1.1rem;
         }
+    }
+
+    .confirmation {
+        position: absolute;
+        left: -10000px;
     }
 }
